fix configuration + minor fix