@@ -3,14 +3,13 @@ package com.github.fttroy.reminder.mongo.service;
 import com.github.fttroy.reminder.mongo.document.History;
 import com.github.fttroy.reminder.mongo.repository.HistoryRepository;
 import lombok.extern.slf4j.Slf4j;
-import org.bson.types.ObjectId;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.time.ZoneId;
 import java.time.ZonedDateTime;
-import java.util.List;
+import java.util.Collections;
 import java.util.Optional;
 
 @Slf4j
@@ -22,16 +21,8 @@ public class HistoryService {
     @Autowired
     private HistoryRepository repository;
 
-    public History findHistoryById(ObjectId id) {
-        return repository.findById(id).orElse(initializeHistory());
-    }
-
     public History findHistoryByEmail(String email) {
         return repository.findByEmail(email);
-    }
-
-    public History initializeHistory() {
-        return repository.save(new History());
     }
 
     public History updateHistory(String email) {
@@ -46,10 +37,10 @@ public class HistoryService {
         } else {
             log.info("history for user {} not found", email);
             History history = new History();
-            history.setConfirm(List.of(now));
+            history.setConfirm(Collections.singletonList(now));
             history.setEmail(email);
             log.info("saving new history:{}", history);
-            return repository.save(new History());
+            return repository.save(history);
         }
     }
 }
